--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "moesif-aws-lambda",
-  "version": "1.2.0",
+  "version": "1.2.3",
   "description": "API Monitoring Middleware for AWS Lambda",
-  "main": "./lib/index.js",
+  "main": "lib/index.js",
   "keywords": [
     "moesif",
     "aws",
@@ -35,8 +35,7 @@
     "debug": "^3.1.0",
     "lodash": "^4.17.13",
     "moesifapi": "^2.0.2",
-    "request-ip": "^2.1.3",
-    "string": "^3.1.1"
+    "request-ip": "^2.1.3"
   },
   "scripts": {
     "test": "node_modules/.bin/mocha --reporter spec"
