--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moesif-aws-lambda",
-  "version": "1.2.5",
+  "version": "1.2.6",
   "description": "API Monitoring Middleware for AWS Lambda",
   "main": "lib/index.js",
   "keywords": [
@@ -34,7 +34,9 @@
   "dependencies": {
     "lodash": "^4.17.15",
     "moesifapi": "^2.0.7",
-    "request-ip": "^2.1.3"
+    "request-ip": "^2.1.3",
+    "crypto-js": "^3.1.9-1",
+    "card-validator": "^6.2.0"
   },
   "scripts": {
     "test": "node_modules/.bin/mocha --reporter spec"
