--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moesif-aws-lambda",
-  "version": "1.5.1",
+  "version": "1.5.2",
   "description": "API Monitoring Middleware for AWS Lambda",
   "main": "lib/index.js",
   "keywords": [
@@ -33,9 +33,9 @@
   },
   "dependencies": {
     "lodash": "^4.17.15",
-    "moesifapi": "^2.1.3",
+    "moesifapi": "^2.1.4",
     "request-ip": "^3.3.0",
-    "crypto-js": "^3.1.9-1",
+    "crypto-js": "^4.2.0",
     "card-validator": "^6.2.0"
   },
   "scripts": {
