--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.21",
-    "moesifapi": "^2.1.6",
+    "moesifapi": ">=2.1.6",
     "request-ip": "^3.3.0",
     "crypto-js": "^4.2.0",
     "card-validator": "^6.2.0"
