--- a/package.json
+++ b/package.json
@@ -40,5 +40,10 @@
   },
   "scripts": {
     "test": "node_modules/.bin/mocha --reporter spec"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.8.0",
+    "eslint": "^9.8.0",
+    "globals": "^15.9.0"
   }
 }
