--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moesif-aws-lambda",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "API Monitoring Middleware for AWS Lambda",
   "main": "lib/index.js",
   "keywords": [
@@ -33,12 +33,17 @@
   },
   "dependencies": {
     "lodash": "^4.17.21",
-    "moesifapi": ">=2.1.6",
+    "moesifapi": ">=2.1.7",
     "request-ip": "^3.3.0",
     "crypto-js": "^4.2.0",
     "card-validator": "^6.2.0"
   },
   "scripts": {
     "test": "node_modules/.bin/mocha --reporter spec"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.8.0",
+    "eslint": "^9.8.0",
+    "globals": "^15.9.0"
   }
 }
