--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
     "url": "https://github.com/Moesif/moesif-aws-lambda-nodejs/issues"
   },
   "dependencies": {
+    "card-validator": "^6.2.0",
+    "crypto-js": "^4.2.0",
     "lodash": "^4.17.21",
     "moesifapi": ">=2.1.9",
     "request-ip": "^3.3.0",
-    "crypto-js": "^4.2.0",
-    "card-validator": "^6.2.0"
+    "uuid": "^10.0.0"
   },
   "scripts": {
     "test": "node_modules/.bin/mocha --reporter spec"
