--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "dotenv": "^16.4.5",
     "eslint": "^9.8.0",
     "globals": "^15.9.0"
   }
