--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@eslint/js": "^9.8.0",
     "dotenv": "^16.4.5",
     "eslint": "^9.8.0",
-    "globals": "^15.9.0"
+    "globals": "^15.9.0",
+    "mocha": "^10.7.3"
   }
 }
