--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moesif-aws-lambda",
-  "version": "2.0.3",
+  "version": "2.0.5",
   "description": "API Monitoring Middleware for AWS Lambda",
   "main": "lib/index.js",
   "keywords": [
@@ -44,7 +44,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "dotenv": "^16.4.5",
     "eslint": "^9.8.0",
-    "globals": "^15.9.0"
+    "globals": "^15.9.0",
+    "mocha": "^10.7.3"
   }
 }
